<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stStationCfg" Id="{495d9b3b-d19f-4b74-b60a-2dcb4cb8bef9}">
    <Declaration><![CDATA[TYPE stStationCfg :
STRUCT
	sName					: STRING;
	lrStartPosition			: LREAL;
	lrEndPosition			: LREAL;
	lrStopPosition			: ARRAY [1..3] OF LREAL;
	lrProcessingTime		: LREAL;
	uiNumStopPositions		: UDINT;
	lrTravelTime			: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>