<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_Mover" Id="{1aab077e-4cc1-4c98-9499-1e62a3dad5bc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Mover 
VAR_IN_OUT
	aStations				: ARRAY [1..Tc3_XTS_Utility.TcIoXtsEnvironmentParameterList.MaxXtsInfoStation] OF FB_Station; //Stations
END_VAR
VAR_OUTPUT
	udiID					: UDINT;
END_VAR
VAR
	//Function Blocks
	fbCtcIoXTSMover			: FB_TcIoXtsXPUMover;
	ax						: AXIS_REF;
	fbPower 				: MC_Power;
	fbReset 				: MC_Reset;
	fbHaltCA				: MC_HaltCA;
	fbMoveAbsCA				: MC_MoveAbsoluteCA;
	fbMoveRelCA				: MC_MoveRelativeCA;
	fbMoveAbsTimeCA			: MC_MoveAbsoluteTimeCA;
	fbMoveAbs				: MC_MoveAbsolute;
	fbGearIn				: MC_GearIn;
	fbGearOut				: MC_GearOut;
	fbReadParamSet			: MC_ReadParameterSet := (Execute := TRUE);
	fbAddAxis2Group 		: MC_AddAxisToGroup;
	stParameter				: ST_AxisParameterSet;
	fbJogCA					: MC_JOGCA;
	fbJog					: MC_Jog;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ax.ReadStatus();

fbPower(
	Axis:= ax, 
	Enable:= , 
	Enable_Positive:= , 
	Enable_Negative:= , 
	Override:= , 
	BufferMode:= , 
	Options:= , 
	Status=> , 
	Busy=> , 
	Active=> , 
	Error=> , 
	ErrorID=> );
	
fbReset(
	Axis:= ax, 
	Execute:= , 
	Busy=> , 
	Done=> ,
	Error=> , 
	ErrorID=> );
	
fbJog(
	Axis:= ax, 
	JogForward:= , 
	JogBackwards:= , 
	Mode:= , 
	Position:= , 
	Velocity:= , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

fbJogCA(
	Axis:= ax, 
	JogForward:= , 
	JogBackwards:= , 
	Mode:= , 
	Position:= , 
	Velocity:= , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
fbMoveAbsCA(
	Axis:= ax, 
	Execute:= , 
	ContinuousUpdate:= , 
	Position:= , 
	Velocity:= , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	Gap:= , 
	BufferMode:= , 
	Direction:= , 
	Options:= , 
	Busy=> , 
	Done=> ,
	Error=> , 
	ErrorID=> );
	
fbMoveAbsTimeCA(
	Axis:= ax, 
	bExecute:= , 
	lrPosition:= , 
	lrTime:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorId=> );
	
fbHaltCA(
	Axis:= ax, 
	Execute:= , 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Busy=> , 
	Done=> ,
	Error=> , 
	ErrorID=> );

fbMoveAbs(
	Axis:= ax, 
	Execute:= , 
	Position:= , 
	Velocity:= , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Busy=> , 
	Done=> ,
	Error=> , 
	ErrorID=> );
	
fbMoveRelCA(
	Axis:= ax, 
	Execute:= , 
	ContinuousUpdate:= , 
	Distance:= , 
	Velocity:= , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	Gap:= , 
	BufferMode:= , 
	Options:= , 
	Busy=> , 
	Done=> ,
	Error=> , 
	ErrorID=> );
	
fbGearOut(
	Slave:= ax, 
	Execute:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );

fbReadParamSet(Parameter := stParameter, Axis := ax);
udiID := stParameter.AxisId;
]]></ST>
    </Implementation>
    <Folder Name="Configuration" Id="{bdeb40fe-f4b4-49ca-ab11-33f2a775663d}" />
    <Folder Name="Functionaltities" Id="{564597fa-0109-4822-9f9a-112a54e21ea4}" />
    <Folder Name="Sequences" Id="{f185f7ae-204c-49b5-b2a6-6f4aee3a3773}" />
    <Method Name="m_add2Group" Id="{1cd80238-7ce7-476e-b921-ac285ff68501}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_add2Group : BOOL
VAR_INPUT
	bExecute	: BOOL;
	ag		 	: AXES_GROUP_REF;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbAddAxis2Group(
	AxesGroup:= ag, 
	Axis:= ax, 
	Execute:= bExecute, 
	IdentInGroup:= UDINT_TO_IDENTINGROUP(ax.NcToPlc.AxisId), 
	Done=> m_Add2Group, 
	Busy=> , 
	Error=> , 
	ErrorId=> );
	

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_clearCmd" Id="{52b21229-6666-44f2-89ed-d42b348ede86}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_clearCmd : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbMoveAbsCA.Execute := FALSE;
fbHaltCA.Execute := FALSE;
fbGearIn.Execute := FALSE;
fbReset.Execute	:= FALSE;

	
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_gearIn" Id="{eb60ffea-b236-4b67-8b9f-04a683868c23}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_gearIn : BOOL
VAR_INPUT
	bExecute 			: BOOL;
	lrRatioNumerator 	: LREAL;
	uiRatioDenominator	: UINT;
END_VAR
VAR_IN_OUT
	axMaster	: AXIS_REF;	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbGearIn.Execute 	:= bExecute;
m_gearIn 			:= fbGearIn.InGear;

fbGearIn(
	Master:= axMaster, 
	Slave:= ax, 
	Execute:= , 
	RatioNumerator:= lrRatioNumerator, 
	RatioDenominator:= uiRatioDenominator, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	InGear=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_gearOut" Id="{37c52862-3bf3-4f3a-b3f6-3081d1d7d6d6}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_gearOut : BOOL
VAR_INPUT
	bExecute 			: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbGearOut.Execute 	:= bExecute;
m_gearOut 			:= fbGearOut.Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_getmoveratpos" Id="{d926c30d-d05c-4420-9630-71c9464b03b9}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_getmoveratpos : BOOL
VAR_INPUT
	lrPosition : LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF ax.NcToPlc.ModuloSetPos > lrPosition-1 AND ax.NcToPlc.ModuloSetPos < lrPosition+1 THEN
	m_getmoveratpos := TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_haltca" Id="{7b2f1233-4864-4896-a31d-954c8d1d8a6e}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_haltca : BOOL
VAR_INPUT
	bExecute : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbHaltCA.Execute 	:= bExecute;
fbHaltCA.Gap		:= MC_DEFAULT;
m_haltca			:= fbHaltCA.Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_InvertPolarity" Id="{c99e1dcc-4b4b-4d54-9470-f1075bcc3725}" FolderPath="Configuration\">
      <Declaration><![CDATA[METHOD m_InvertPolarity : BOOL
VAR_INPUT
	bExecute : BOOL;
	bValue	 : BOOL;
END_VAR
VAR_INST
	iState 		: INT;
	fbWrite 	: MC_WriteParameterPersistent;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE iState OF 
	0 : IF bExecute THEN 
			fbWrite(Axis := ax, Execute := FALSE);
			iState := iState + 1; 
		END_IF
	1 :  
		fbWrite(
			Axis:= ax, 
			Execute:= TRUE, 
			ParameterNumber:= MC_AxisParameter.AxisMotorDirectionInverse, 
			Value:= BOOL_TO_LREAL(bValue), 
			Done=> , 
			Busy=> , 
			Error=> , 
			ErrorID=> );
		IF fbWrite.Done THEN
			fbWrite(Axis := ax, Execute := FALSE);
			iState := iState + 1;
		END_IF
	2 : 
		fbWrite(
			Axis:= ax, 
			Execute:= TRUE, 
			ParameterNumber:= MC_AxisParameter.AxisEncoderDirectionInverse, 
			Value:= BOOL_TO_LREAL(bValue), 
			Done=> , 
			Busy=> , 
			Error=> , 
			ErrorID=> );
		IF fbWrite.Done THEN
			fbWrite(Axis := ax, Execute := FALSE);
			iState := iState + 1;
		END_IF
	3 : //Job Done
		m_InvertPolarity := TRUE;
		IF bExecute = FALSE THEN
			iState := 0;
		END_IF
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_jogca" Id="{c1a6f6ed-796b-493c-8437-bf8f7b778ef5}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_jogca : BOOL
VAR_INPUT
	bJogBackwards	: BOOL;
	bJogForward		: BOOL;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbJogCA.JogBackwards	:= bJogBackwards;
fbJogCA.JogForward		:= bJogForward;
//fbJogCA.Mode		:= eType;
//fbJogCA.Position	:= lrPosition;
//fbJogCA.Velocity	:= lrVelocity;
m_jogca				:= fbJogCA.Busy;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_jogca_velo" Id="{dba4b851-3601-4f6d-9776-30851422662e}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_jogca_velo : BOOL
VAR_INPUT
	bJogBackwards	: BOOL;
	bJogForward		: BOOL;
	lrVelocity		: LREAL;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbJogCA.JogBackwards	:= bJogBackwards;
fbJogCA.JogForward		:= bJogForward;
fbJogCA.Mode			:= E_JogMode.MC_JOGMODE_CONTINOUS;
fbJogCA.Velocity		:= lrVelocity;
m_jogca_velo			:= fbJogCA.Busy;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_moveca" Id="{26bf8074-949c-43ce-b4ae-c9bf47db1841}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_moveca : BOOL
VAR_INPUT
	bExecute	: BOOL;
	lrPosition 	: LREAL;
	lrVelocity	: LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbMoveAbsCA.Position 			:= lrPosition;
fbMoveAbsCA.Velocity			:= lrVelocity;
fbMoveAbsCA.Acceleration		:= stParameter.fAcceleration; 
fbMoveAbsCA.Deceleration		:= stParameter.fDeceleration; 
fbMoveAbsCA.Jerk				:= stParameter.fJerk; 
fbMoveAbsCA.Direction			:= tc3_mc3definitions.mcDirectionPositive;
fbMoveAbsCA.ContinuousUpdate 	:= TRUE;
fbMoveAbsCA.Execute				:= bExecute;
fbMoveAbsCA.Gap					:= MC_DEFAULT;
m_moveca						:= fbMoveAbsCA.Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_moveca_bytime" Id="{a6d6ec43-1d3e-493d-be8b-cdfb8d5c5e8d}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_moveca_bytime : BOOL
VAR_INPUT
	bExecute	: bool;
	lrPosition 	: LREAL;
	lrTime		: LREAL;
END_VAR
(*VAR_INST
	fbProfileByTime : FB_ProfileByTime;
END_VAR*)]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*fbProfileByTime.lrDistance := lrPosition - ax.NcToPlc.ModuloSetPos;
IF fbProfileByTime.lrDistance <> 0 THEN
	IF fbProfileByTime.lrDistance < 0 THEN fbProfileByTime.lrDistance := fbProfileByTime.lrDistance + stParameter.fEncModuloFactor; END_IF
	fbProfileByTime(
		lrTime:= lrTime, 
		//lrDistance:= lrPosition - fbAxis.NcToPlc.ModuloSetPos, 
		lrMaxVelocity:= stParameter.fVeloMaximum, 
		lrMaxAcceleration:= stParameter.fAcceleration, 
		lrMaxJerk:= stParameter.fJerk, 
		lrVelocity=> , 
		lrAcceleration=> , 
		lrJerk=> );
		
	fbMoveAbsCA.Position		:= lrPosition;
	fbMoveAbsCA.Direction		:= tc3_mc3Definitions.MC_DIRECTION.mcDirectionPositive;
	fbMoveAbsCA.Velocity 		:= MAX(fbProfileByTime.lrVelocity, 100.0);
	fbMoveAbsCA.Acceleration 	:= fbProfileByTime.lrMaxAcceleration;
	fbMoveAbsCA.Deceleration 	:= fbProfileByTime.lrMaxAcceleration;
	fbMoveAbsCA.Jerk 			:= fbProfileByTime.lrMaxJerk;
	fbMoveAbsCA.Execute			:= bExecute;
	
	IF fbMoveAbsCA.Done THEN
		m_moveca_bytime := TRUE;
	END_IF
ELSE
	m_moveca_bytime := TRUE;
END_IF*)

fbMoveAbsTimeCA.bExecute 	:= bExecute;
fbMoveAbsTimeCA.lrPosition 	:= lrPosition;
fbMoveAbsTimeCA.lrTime		:= lrTime;
m_moveca_bytime				:= fbMoveAbsTimeCA.Done;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_moveca_direction" Id="{15730622-1d32-4446-9e69-930c706c010a}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_moveca_direction : BOOL
VAR_INPUT
	bExecute	: BOOL;
	lrPosition 	: LREAL;
	lrVelocity	: LREAL;
	Direction	: tc3_mc3definitions.MC_DIRECTION;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbMoveAbsCA.Position 			:= lrPosition;
fbMoveAbsCA.Velocity			:= lrVelocity;
fbMoveAbsCA.Acceleration		:= stParameter.fAcceleration; 
fbMoveAbsCA.Deceleration		:= stParameter.fDeceleration; 
fbMoveAbsCA.Jerk				:= stParameter.fJerk; 
fbMoveAbsCA.Direction			:= Direction;
fbMoveAbsCA.ContinuousUpdate 	:= TRUE;
fbMoveAbsCA.Execute				:= bExecute;
fbMoveAbsCA.Gap					:= MC_DEFAULT;
m_moveca_direction				:= fbMoveAbsCA.Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_moveca_gap" Id="{d704d74c-af17-4556-8cfc-79a8de0aa4b3}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_moveca_gap : BOOL
VAR_INPUT
	bExecute	: BOOL;
	lrPosition 	: LREAL;
	lrVelocity	: LREAL;
	lrGap		: LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbMoveAbsCA.Position 			:= lrPosition;
fbMoveAbsCA.Velocity			:= lrVelocity;
fbMoveAbsCA.Acceleration		:= stParameter.fAcceleration; 
fbMoveAbsCA.Deceleration		:= stParameter.fDeceleration; 
fbMoveAbsCA.Jerk				:= stParameter.fJerk; 
fbMoveAbsCA.Direction			:= tc3_mc3definitions.mcDirectionPositive;
fbMoveAbsCA.ContinuousUpdate 	:= TRUE;
fbMoveAbsCA.Execute				:= bExecute;
fbMoveAbsCA.Gap					:= lrGap;
m_moveca_gap					:= fbMoveAbsCA.Done;

]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_moverstandstill" Id="{8780ee4f-95d1-4f6a-a029-bf962612d2bc}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_moverstandstill : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[m_moverstandstill := ax.NcToPlc.SetVelo=0.0;]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_power_off" Id="{dd216d82-768a-4467-b3af-0290f0de6287}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_power_off : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbPower.Enable 			:= FALSE;
fbPower.Enable_Positive := FALSE;
fbPower.Enable_Negative := FALSE;
m_power_off := NOT fbPower.Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_power_on" Id="{59999de6-a574-4559-8e80-2cfda5489c98}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_power_on : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbPower.Enable 			:= TRUE;
fbPower.Enable_Positive := TRUE;
fbPower.Enable_Negative := TRUE;
m_power_on				:= fbPower.Status;]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_reset" Id="{874a5cb4-c249-4e17-8321-3c7e478032a8}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_reset : BOOL
VAR_INPUT
	bExecute : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbReset.Execute			:= bExecute;
m_reset					:= fbReset.Done;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_standstill" Id="{008adc15-4883-4f53-befa-8735f3ab6c0f}" FolderPath="Functionaltities\">
      <Declaration><![CDATA[METHOD m_standstill : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[m_standstill := ax.NcToPlc.SetVelo=0;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="p_Axis" Id="{bffaf1f7-2c4f-4e93-8acc-bf2a5affd02c}">
      <Declaration><![CDATA[PROPERTY p_Axis : reference to AXIS_REF]]></Declaration>
      <Get Name="Get" Id="{051a7e37-5540-4bdd-8704-39ad6248dc55}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[p_Axis ref= ax;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{6fe09b21-b6bd-4b40-bc03-8933b055e70d}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ax := p_Axis;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="p_ModulePos" Id="{db67240c-5e02-4111-a3fa-99184e791147}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY p_ModulePos : lreal
]]></Declaration>
      <Get Name="Get" Id="{db8bd786-c2b0-4237-9925-b7ca081e2209}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[p_ModulePos := ax.NcToPlc.ModuloActPos;

]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Sequence1" Id="{95171de9-70bf-45b3-b080-b8e85de9059f}" FolderPath="Sequences\">
      <Declaration><![CDATA[METHOD Sequence1 : BOOL
VAR_INPUT
	bEnable 	: BOOL;
END_VAR
VAR_INST
	iState 		: INT;
	iStation 	: INT;
	oTON		: TON;
	bBusy		: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE iState OF

	0 : //Idle
		bBusy := FALSE;
		IF bEnable THEN
			iState := iState + 10;
			bBusy := TRUE;
			iStation := 1;
			m_moveca_bytime(FALSE, 0.0, 0.0);
		END_IF

	10 : //
		 IF m_moveca_bytime(TRUE, aStations[iStation].stCfg.lrStartPosition + aStations[iStation].stCfg.lrStopPosition[1], aStations[iStation].stCfg.lrTravelTime) THEN
			 m_moveca_bytime(FALSE, aStations[iStation].stCfg.lrStartPosition + aStations[iStation].stCfg.lrStopPosition[1], aStations[iStation].stCfg.lrTravelTime);
			 iState := iState + 10;
		 END_IF
		 IF bEnable = FALSE THEN iState := 0; END_IF
		 
	20 : //Wait handshake Stations
		 IF aStations[iStation].Sequence1(TRUE) THEN
			 aStations[iStation].Sequence1(FALSE);
			 iState := iState + 10;
		 END_IF
		 IF bEnable = FALSE THEN iState := 0; END_IF
		 	
	30 : //Go to Next Stations
		 iStation := iStation + 1;
		 IF aStations[iStation].stCfg.sName = '' THEN iStation := 1; END_IF
		 iState := SEL(bEnable, 0, 10);

 END_CASE
 Sequence1 := bBusy;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>